Actualizado main.html

--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
 				Somos un grupo de fans que disfrutan jugando a videojuegos pero les duele ver que una gran parte de esos videojuegos no vienen en español, haciendo que mucha gente no pueda disfrutarlos como es debido por la barrera del idioma.<br><br>
 				Nuestra misión es facilitar a los usuarios el poder disfrutar de esos juegos, ya que tienen historias que quieren ser contadas, tienen una jugabilidad que quiere ser disfrutada, pero el que un juego esté en inglés impide a mucha gente el poder disfrutarlos.
 				Así que nos dedicamos a traducir esos juegos para que tú y todo el mundo puedan disfrutarlo.<br><br>
-				No somos una empresa, no somos una ONG, solo somos un grupo de fans, no queremos donaciones, no queremos fama, no queremos ninguna recompensa salvo unas gracias por traducir el juego que ahora puedes disfrutar. (Opcional, pero nos gustaría :P)
 				<div class="title"><h1>Nuestros proyectos</h1></div>
 				Ahora mismo estamos empezando unos nuevos proyectos, traducir del inglés al español los juegos <a href="runefactory4/informacion.html">"Rune Factory 4"</a> y <a href="lordofmagna/informacion.html">"Lord of Magna: Maiden Heaven</a>, unos juegos que salieron en japonés y en inglés pero no en español. <br><br>
 				Acabamos de terminar la traducción de <a href="stellaglow/informacion.html">Stella Glow</a>, prácticamente un año y poco hemos tardado en traducirlo, lo hemos probado y funciona bien, es fácil de aplicar, y te permitirá disfrutar el juego en español.<br><br>
 				Posiblemente tenga errores gramaticales, alguna que otra frase en un español que no sea neutro, o alguna palabra fuera de contexto, pero no somos profesionales, así que es normal.<br><br>
 				Si encuentras un error, revisa la sección de "información" del juego especifico para ayudarnos a arreglar errores y lo arreglaremos lo antes posible.
+				<div class="title"><h1>¿Por qué no aceptamos donaciones?</h1></div>
+				Gracias por querer contribuir por nuestras traducciones, pero en vez de donar tu dinero a nosotros, usa ese dinero en cosas que realmente te hagan falta para el día a día (y más sobre estas fechas que está la economía fatal).<br><br>
+				Nos alegra un montón que quieras donarnos una mínima cantidad de dinero, pero nosotros hacemos esto porque queremos que todo el mundo disfrute de los videojuegos en su idioma nativo (en este caso en español) y son proyectos hechos por fans para fans y sin ánimo de lucro :D<br><br>
+				Hacemos esto porque mayormente, somos estudiantes y queremos aprender gracias a este fansub para mejorar nuestras bases y... Quién sabe si en un futuro alguien de aquí trabaja en alguna compañía de videojuegos como traductor ^^<br><br>
+				Por último, el hosting de la web que usamos es GitHub, es gratuito y es open source <a href="https://github.com/Glowtranslations">(pulse aquí para ver nuestro repositorio)</a> junto con un dominio gratuito .tk, por eso tampoco necesitamos donaciones ni publicidad para que la web se mantenga viva ^^<br><br>
 				<div class="title"><h1>¡A disfrutar!</h1></div>
 				Si estás aquí es porque te interesa algún juego que hemos traducido o porque nos quieres hacer una reclamación de derechos de autor, en cualquier caso, en la sección de traducciones tienes todos nuestros proyectos con links de descarga de los parches para traducir el juego. <br>
 				<img onload="this.style.opacity='1';" src="images/girls.png" ></img>
