Actualizado los progresos

--- a/lordofmagna/progresos.html
+++ b/lordofmagna/progresos.html
@@ -27,7 +27,7 @@
 				<b><u>¿Qué está traducido? </u></b><br>
 				Actualmente esta traducido: De momento nada, ¡estamos trabajando en ello! <br><br>
 				<b><u>¿Qué falta por traducir? </u></b><br>
-				Actualmente, falta por traducir: La historia, las conversaciones, las relaciones, los objetos, las localizaciones, la interfaz, las habilidades y magias. <br><br>
+				Actualmente, falta por traducir: La historia, las conversaciones, las relaciones, los objetos, las localizaciones, la interfaz, vídeos, las habilidades y magias. <br><br>
 			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </b></u><br>
 				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
 				<table class='progress'>
@@ -40,6 +40,7 @@
 				<tr><td>Objetos</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Localizaciones</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Habilidades y magias</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Vídeos</td><td class='wip'>5%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Interfaz</td><td class='wip'>35%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</tr>
 				</table>
