--- a/runefactory4/progresos.html
+++ b/runefactory4/progresos.html
@@ -27,7 +27,7 @@
 				<b><u>¿Qué está traducido? </u></b><br>
 				Actualmente esta traducido: De momento nada, ¡estamos trabajando en ello! <br><br>
 				<b><u>¿Qué falta por traducir? </u></b><br>
-				Actualmente, falta por traducir: La historia (Arco 1, Arco 2 y Arco 3), las conversaciones, los eventos, el equipo, los objetos, las localizaciones, las habilidades y magias runa y la interfaz. <br><br>
+				Actualmente, falta por traducir: La historia (Arco 1, Arco 2 y Arco 3), las conversaciones, los eventos, el equipo, los objetos, las localizaciones, vídeos, las habilidades, magias runa y la interfaz. <br><br>
 			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </b></u><br>
 				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
 				<table class='progress'>
@@ -42,6 +42,7 @@
 				<tr><td>Equipo</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Objetos</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Vídeos</td><td class='wip'>10%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Habilidades y magias Runa</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Interfaz</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</tr>
