--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-76928300-1');
 	</script>
+	<meta property="og:title" content="Glowtranslations"/>
+	<meta property="og:description" content="Pagina oficial de Glow translations, traducciones FAN de juegos."/>
+	<meta property="og:url" content=" http://www.glowtranslations.tk/"/>
+	<meta property="og:image" content="https://github.com/Glowtranslations/glowtranslations.github.io/blob/master/images/logo.png?raw=true"/>
 	<title>GlowTranslations</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="progress.css">
