Arreglado el icono meta

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:title" content="Glowtranslations"/>
 	<meta property="og:description" content="Pagina oficial de Glow translations, traducciones FAN de juegos."/>
 	<meta property="og:url" content=" http://www.glowtranslations.tk/"/>
-	<meta property="og:image" content="https://github.com/Glowtranslations/glowtranslations.github.io/blob/master/images/logo.png?raw=true"/>
+	<meta property="og:image" content="images/metaindex.png"/>
 	<title>GlowTranslations</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="progress.css">
