--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations"/>
 	<meta property="og:description" content="Pagina oficial de Glow translations, traducciones FAN de juegos."/>
-	<meta property="og:url" content=" http://www.glowtranslations.tk/"/>
 	<meta property="og:image" content="images/metaindex.png"/>
 	<title>GlowTranslations</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -17,7 +16,7 @@
 	<link rel="icon" href="favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="keywords" content="Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
+	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head>
