--- a/miembros.html
+++ b/miembros.html
@@ -7,12 +7,15 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-76928300-1');
 	</script>
+	<meta property="og:title" content="Glowtranslations - Miembros"/>
+	<meta property="og:description" content="Miembros de Glowtranslations"/>
+	<meta property="og:image" content="images/metaindex.png"/>
 	<title>GlowTranslations - Miembros</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" href="favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="keywords" content="Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
+	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="GlowTranslations">
 </head>
