--- a/runefactory4/galeria.html
+++ b/runefactory4/galeria.html
@@ -7,13 +7,16 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-76928300-1');
 	</script>
+	<meta property="og:title" content="Glowtranslations - Rune Factory 4 - Galería"/>
+	<meta property="og:description" content="Galería sobre la traducción de Rune Factory 4."/>
+	<meta property="og:image" content="../images/metarune.jpg"/>
 	<title>GlowTranslations - Rune Factory 4 - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" type="text/css" href="gallery.css">
 	<link rel="icon" href="../favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="keywords" content="Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
+	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head> 
