--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="content-title">Noticias</div>
 				</div>
 				<ul>
-					<li><a href="#">Agosto 2017</a></li>
+					<li><a href="#">Octubre 2017</a></li>
 				</ul>
                 <a href="https://t.me/GlowTranslations"><img src="images/telegram.png" onload="this.style.opacity='1';"></a><br>
 			</div>
