Fix progresos Lord

--- a/translations/lordofmagna/progresos.html
+++ b/translations/lordofmagna/progresos.html
@@ -58,7 +58,7 @@
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../menus.js" onload="mainMenu(), lordofMagnaSubMenu(), footer()"></script>
+		<script src="../../js/menus.js" onload="mainMenu(), lordofMagnaSubMenu(), footer()"></script>
 	</div>
 </body>
 </html>
