Añadida la noticia nº2 de la web

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 		<div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="index.html"><div class="logo"></div></a></div>
 		<div class="content-container" style="width: 630px; float: left;">
+			<div class="content-title" style="width: 610px;">Avances sobre la traducción de Lord of Magna: Maiden Heaven</div>
+			<div class="content">
+				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/10-2017/AvancesLord-25/images/top.png" ><br>
+                <b>¡Noticias frescas!</b><br><br>
+                Termina el mes y nosotros seguimos con muchas ganas.<br>
+                Estamos viento en popa trabajando en nuestros proyectos, pero ha surgido una idea que
+                queremos llevar a cabo... <br>
+				<center><a class="boton_readmore" href="articles/10-2017/AvancesLord-25/Avances_Lord_of_Magna.html">Leer más</a></center>
+			</div>
 			<div class="content-title" style="width: 610px;">¡Añadimos las entradas!</div>
 			<div class="content">
 				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/10-2017/Entradas-22/images/top.jpg" ><br>
@@ -63,8 +72,7 @@
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
 			</div>
-            <div style="clear: both;"></div>
-			<div class="module" style="width: 260px; margin-top: 10px;">
+            <div class="module" style="width: 260px; margin-top: 10px;">
 			<div class="content-container">
 				<div class="module-title-background" style="background-image: url('images/progress-banner.png');">
 				<div class="content-title">Progresos</div>
@@ -87,9 +95,9 @@
 				<div style="clear: both;"></div>
 				<div class="progress-title">Lord of Magna: Maiden Heaven</div>
 					<div class="wrap">
-					<div class="progress-radial progress-10" style="background-color: #4f7cfe;">
+					<div class="progress-radial progress-30" style="background-color: #4f7cfe;">
  					 <div class="overlay"></div>
- 					 <div class="text-overlay" style="font-size: 30px;">10%</div>
+ 					 <div class="text-overlay" style="font-size: 30px;">30%</div>
 					</div>
 					</div>
 				<div style="clear: both;"></div>
