--- a/translations/lordofmagna/progresos.html
+++ b/translations/lordofmagna/progresos.html
@@ -39,20 +39,20 @@
 				Actualmente esta traducido: De momento nada, ¡estamos trabajando en ello! <br><br>
 				<b><u>¿Qué falta por traducir? </u></b><br>
 				Actualmente, falta por traducir: La historia, las conversaciones, las relaciones, los objetos, las localizaciones, la interfaz, vídeos, las habilidades y magias. <br><br>
-			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </b></u><br>
+			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </u></b><br>
 				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
 				<table class='progress'>
 				<tr>
 				<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
 				</tr>
-				<tr><td>Historia</td><td class='wip'>35%</td><td class='no'>No</td><td class='no'>No</td></tr>
+				<tr><td>Historia</td><td class='wip'>55%</td><td class='wip'>25%</td><td class='no'>No</td></tr>
 				<tr><td>Conversaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Relaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Objetos</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Localizaciones</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Habilidades y magias</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Vídeos</td><td class='wip'>5%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Interfaz</td><td class='wip'>55%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Interfaz</td><td class='wip'>60%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</table>
    </div>
 		</div>
