Añadida la noticia nº3

--- a/index.html
+++ b/index.html
@@ -33,13 +33,24 @@
 		<div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="index.html"><div class="logo"></div></a></div>
 		<div class="content-container" style="width: 630px; float: left;">
+        <div class="content-title" style="width: 610px;">GlowNovedades #1 - Halloween Edition</div>
+			<div class="content">
+				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/10-2017/GlowNovedades1-31/images/top.png" ><br>
+                <b>¡¡Feliz Halloween!!</b><br><br>
+
+                    Llegamos a fechas de terror y sorpresas, pero como no damos mucho miedo, preferimos
+                    sorprenderos con algunas <b>novedades</b> , <b>buenas noticias</b> y el estreno de nuestra sección
+                    <b><u>GlowNovedades</u></b>, donde cada mes explicaremos el estado de los proyectos, pero además,
+                    <b>¡Una gran sorpresa!</b>...<br> <br>
+				<center><a class="boton_readmore" href="articles/10-2017/GlowNovedades1-31/GlowNovedades-1.html">Leer más</a></center>
+			</div>
 			<div class="content-title" style="width: 610px;">Avances sobre la traducción de Lord of Magna: Maiden Heaven</div>
 			<div class="content">
 				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/10-2017/AvancesLord-25/images/top.png" ><br>
                 <b>¡Noticias frescas!</b><br><br>
                 Termina el mes y nosotros seguimos con muchas ganas.<br>
                 Estamos viento en popa trabajando en nuestros proyectos, pero ha surgido una idea que
-                queremos llevar a cabo... <br>
+                queremos llevar a cabo... <br><br>
 				<center><a class="boton_readmore" href="articles/10-2017/AvancesLord-25/Avances_Lord_of_Magna.html">Leer más</a></center>
 			</div>
 			<div class="content-title" style="width: 610px;">¡Añadimos las entradas!</div>
@@ -48,7 +59,7 @@
                 Ha pasado mucho tiempo, pero por fin…<br>
                 <b>¡¡Añadimos las entradas!!</b><br><br>
 
-				Nuestro superwebmaster ha trabajado arduamente para incluir detalles muy interesantes que esperamos os hagan más amena la espera de nuevas novedades.... <br>
+				Nuestro superwebmaster ha trabajado arduamente para incluir detalles muy interesantes que esperamos os hagan más amena la espera de nuevas novedades.... <br><br>
 				<center><a class="boton_readmore" href="articles/10-2017/Entradas-22/Integramos_las_entradas.html">Leer más</a></center>
 			</div>
 		</div>
@@ -103,7 +114,6 @@
 				<div style="clear: both;"></div>
 			</div>
 		</div>
-         <div style="clear: both;"></div>
 		<div class="module" style="width: 260px; margin-top: 10px;">
 			<div class="content-container">
 				<div class="module-title-background" style="background-image: url('images/friends-banner.png');">
@@ -113,6 +123,7 @@
 				<a href="http://hotayeldi-traducciones.blogspot.com.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/artema.png"></a>
 				<a href="http://tiovictor.romhackhispano.org/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/tiovictor.png"></a>
 				<a href="https://www.gradienwords.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/gradien.png"></a>
+                <a href="http://traduccionesxt.blogspot.com.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/tradusXT.png"></a>
 			</div>
 		</div>
 		<div style="height:100px; clear: both;"></div>
