--- a/translations/lordofmagna/galeria.html
+++ b/translations/lordofmagna/galeria.html
@@ -84,7 +84,25 @@
     <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" onclick="openModal();currentSlide(5)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Combate-1.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Combate-2.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Eventos.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Localizacion.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/skill.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
   </div>
 </div>
 
@@ -93,23 +111,51 @@
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1 / 4</div>
+      <div class="numbertext">1 / 10</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 4</div>
+      <div class="numbertext">2 / 10</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 4</div>
+      <div class="numbertext">3 / 10</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 4</div>
+      <div class="numbertext">4 / 10</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-4.jpg" style="margin: auto;">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext">5 / 10</div>
         <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" style="margin: auto;">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">6 / 10</div>
+        <img onload="this.style.opacity='1';" src="gallery/Combate-1.jpg" style="margin: auto;">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">7 / 10</div>
+        <img onload="this.style.opacity='1';" src="gallery/Combate-2.jpg" style="margin: auto;">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext">8 / 10</div>
+        <img onload="this.style.opacity='1';" src="gallery/Eventos.jpg" style="margin: auto;">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">9 / 10</div>
+        <img onload="this.style.opacity='1';" src="gallery/Localizacion.jpg" style="margin: auto;">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">10 / 10</div>
+        <img onload="this.style.opacity='1';" src="gallery/skill.jpg" style="margin: auto;">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -131,7 +177,29 @@
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Nombres.JPG" onclick="currentSlide(4)" alt="Nombres iniciales">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-4.jpg" onclick="currentSlide(4)" alt="Conversaciones">
+    </div>
+    <div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Nombres.JPG" onclick="currentSlide(5)" alt="Pantalla de inicio">
+    </div>
+
+    <div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Combate-1.jpg" onclick="currentSlide(6)" alt="Combate">
+    </div>
+
+    <div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Combate-2.jpg" onclick="currentSlide(7)" alt="Combate">
+    </div>
+    <div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Eventos.jpg" onclick="currentSlide(8)" alt="Eventos">
+    </div>
+
+    <div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Localizacion.jpg" onclick="currentSlide(9)" alt="Localización">
+    </div>
+
+    <div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/skill.jpg" onclick="currentSlide(10)" alt="Habilidades">
     </div>
     </div>
   </div>
