--- a/translations/runefactory4/miembros.html
+++ b/translations/runefactory4/miembros.html
@@ -57,12 +57,6 @@
 					</div>
 				</div>
 				<div class="credits-container"> 
-					<div class="credits-name">Alexiiius</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Alexiiius.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container"> 
 					<div class="credits-name">Xppancho</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
@@ -96,6 +90,12 @@
 					<div class="credits-name">Jesa</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Sonicus</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
