--- a/translations/lordofmagna/progresos.html
+++ b/translations/lordofmagna/progresos.html
@@ -45,14 +45,14 @@
 				<tr>
 				<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
 				</tr>
-				<tr><td>Historia</td><td class='wip'>55%</td><td class='wip'>25%</td><td class='no'>No</td></tr>
-				<tr><td>Conversaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Relaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Objetos</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Localizaciones</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Habilidades y magias</td><td class='wip'>50%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Vídeos</td><td class='wip'>5%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Interfaz</td><td class='wip'>60%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Historia</td><td class='wip'>80%</td><td class='wip'>35%</td><td class='no'>No</td></tr>
+				<tr><td>Conversaciones</td><td class='wip'>80%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Relaciones</td><td class='wip'>80%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Objetos</td><td class='yes'>100%</td><td class='wip'>50%</td><td class='no'>no</td></tr>
+				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='wip'>45%</td><td class='no'>no</td></tr>
+				<tr><td>Habilidades y magias</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Vídeos</td><td class='wip'>30%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Interfaz</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</table>
    </div>
 		</div>
