--- a/translations/runefactory4/participa.html
+++ b/translations/runefactory4/participa.html
@@ -37,24 +37,8 @@
 				<img onload="this.style.opacity='1';" src="../../images/rune-participa.png" style="float: right;">
 				Si te interesa participar en el proyecto de traducción de Rune Factory 4 para 3DS, envíanos un correo para entrar en el grupo de traducción.<br><br>
 				<div class="title"><h1>¿Qué necesitamos?</h1></div>
-				Actualmente tenemos editores gráficos de sobra, así que solo buscamos <s>traductores y</s> correctores para acelerar las cosas y sacar una traducción de calidad.<br>
-				<div class="title"><h2>Corrector</h2></div>
-				Como corrector, tu función principal será leer el texto en inglés, entender el contexto, revisar la frase y corregir las faltas de ortografía que encuentres a la vez de hacer que la frase suene natural sin perder el contexto original. <br><br> 
-				Si has decidido entrar como corrector, mira la conversación que hay a continuación, corrígela y haz que quede más natural, pero sin cambiar el contexto.<br>
-				<ul>
-  				<li><p style="font-weight: 700; text-decoration: underline">Inglés</p><span style="font-style: italic;">
-					Did you see what johnatan did?<br>
-					Yes, what a mess!<br>
-					Yep, we only can start from scratch. <br>
-					Can we do anything to fix that?<br>
-					Nope, only get on the job and stop crying over spilled milk.<br></span></li>
-				<li><p style="font-weight: 700; text-decoration: underline">Español sin corregir</p><span style="font-style: italic;">
-					tu has visto lo que johnatan ha hecho?<br>
-					Si, menudo lio.<br>
-					si, solo podemos empezar de 0.<br>
-					Podemos hacer algo para reparar eso?<br>
-					No, solo podemos ir a trabajar y dejar de llorar sobre la leche derramada<br></span></li>
-				</ul><br>
+				Actualmente tenemos editores gráficos de sobra, <s>así que solo buscamos traductores y correctores para acelerar las cosas y sacar una traducción de calidad</s>.<br>
+                Ya no tenemos la plantilla al completo, ¡muchas gracias por tu colaboración!
   				<div class="title"><h1>Requisitos</h1></div>
   				Necesitamos gente que se involucre con el proyecto, es decir, que le guste el juego, que sea un perfeccionista, es decir, que no deje algo sin hacer y se vaya a otra cosa y que, obviamente, sepa inglés.
 				<br><br>
