Esto me pasa por hacer las cosas corriendo

--- a/translations/runefactory4/participa.html
+++ b/translations/runefactory4/participa.html
@@ -38,7 +38,7 @@
 				Si te interesa participar en el proyecto de traducción de Rune Factory 4 para 3DS, envíanos un correo para entrar en el grupo de traducción.<br><br>
 				<div class="title"><h1>¿Qué necesitamos?</h1></div>
 				Actualmente tenemos editores gráficos de sobra, <s>así que solo buscamos traductores y correctores para acelerar las cosas y sacar una traducción de calidad</s>.<br>
-                Ya no tenemos la plantilla al completo, ¡muchas gracias por tu colaboración!
+                Ya tenemos la plantilla al completo, ¡muchas gracias por tu colaboración!
   				<div class="title"><h1>Requisitos</h1></div>
   				Necesitamos gente que se involucre con el proyecto, es decir, que le guste el juego, que sea un perfeccionista, es decir, que no deje algo sin hacer y se vaya a otra cosa y que, obviamente, sepa inglés.
 				<br><br>
