Añadida la noticia nº5 y cambios en la web

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 		<div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="index.html"><div class="logo"></div></a></div>
 		<div class="content-container" style="width: 630px; float: left;">
+        <div class="content-title" style="width: 610px;">¡Novedades muy frescas en las traducciones y más!</div>
+			<div class="content">
+				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/12-2017/Avancestradus-17/images/top.png" ><br>
+                <b>¡Hola a todos!</b>
+                ¡Traemos novedades muy frescas sobre las traducciones actuales y más!<br><br>
+
+                ¡¡La <b>traducción de Lord of Magna</b> ha finalizado!!. Estamos actualmente en fase de corrección y en breve en testeo/corrección final <br> <br>
+
+                La <b>traducción de Rune Factory 4</b> también tiene sus novedades...<br><br>
+				<center><a class="boton_readmore" href="articles/12-2017/Avancestradus-17/Avancestradus.html">Leer más</a></center>
+			</div>
         <div class="content-title" style="width: 610px;">GlowNovedades #2 - ¡Se acercan las navidades!</div>
 			<div class="content">
 				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/11-2017/GlowNovedades2-30/images/top.png" ><br>
@@ -41,7 +52,7 @@
 
                 La <b>traducción de Lord of Magna</b> va viento en popa. Quedan pocas líneas de texto que traducir y corregir por lo que, una vez terminadas, comenzará su fase de testeo. ¡Esperad un poquito más! <br> <br>
 
-                La <b>traducción de Rune Factory 4</b> también avanza adecuadamente...
+                La <b>traducción de Rune Factory 4</b> también avanza adecuadamente...<br> <br>
 				<center><a class="boton_readmore" href="articles/11-2017/GlowNovedades2-30/GlowNovedades-2.html">Leer más</a></center>
 			</div>
         <div class="content-title" style="width: 610px;">GlowNovedades #1 - Halloween Edition</div>
@@ -80,7 +91,8 @@
 				<div class="content-title">Noticias</div>
 				</div>
 				<ul>
-                    <li><a href="#">Noviembre 2017</a></li>
+                    <li><a href="#">Diciembre 2017</a></li>
+					<li><a href="articles/11-2017/index.html">Noviembre 2017</a></li>
 					<li><a href="articles/10-2017/index.html">Octubre 2017</a></li>
 				</ul>
                 <a href="https://t.me/GlowTranslations"><img src="images/telegram.png" onload="this.style.opacity='1';"></a><br>
@@ -110,17 +122,17 @@
 				<div style="clear: both;"></div>
 				<div class="progress-title">Rune Factory 4</div>
 					<div class="wrap">
-					<div class="progress-radial progress-10" style="background-color: #4f7cfe;">
+					<div class="progress-radial progress-15" style="background-color: #4f7cfe;">
  					 <div class="overlay"></div>
- 					 <div class="text-overlay" style="font-size: 30px;">12%</div>
+ 					 <div class="text-overlay" style="font-size: 30px;">15%</div>
 					</div>
 					</div>
 				<div style="clear: both;"></div>
 				<div class="progress-title">Lord of Magna: Maiden Heaven</div>
 					<div class="wrap">
-					<div class="progress-radial progress-55" style="background-color: #4f7cfe;">
+					<div class="progress-radial progress-75" style="background-color: #4f7cfe;">
  					 <div class="overlay"></div>
- 					 <div class="text-overlay" style="font-size: 30px;">65%</div>
+ 					 <div class="text-overlay" style="font-size: 30px;">75%</div>
 					</div>
 					</div>
 				<div style="clear: both;"></div>
