--- a/miembros.html
+++ b/miembros.html
@@ -56,14 +56,9 @@
 					<div class="member-desc">Traductora</div>
 				</div>
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
-					<div class="member-avatar" style="background-image: url('images/avatars/Natsu.jpg')"></div>
-					<div class="member-name" style="background-color: #4f7cfe;">Natsu Karyuu</div>
-					<div class="member-desc">Corrector</div>
-				</div>
-				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Sany.jpg')"></div>
 					<div class="member-name" style="background-color: #4f7cfe;">Sany</div>
-					<div class="member-desc">Corrector<br>Redactora</div> <!-- Si, esta puesto asi a proposito -->
+					<div class="member-desc">Corrector<br>Redactora</div> <!-- Si, esta puesto así a propósito -->
 				</div>
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Elaine.jpg')"></div>
@@ -73,7 +68,7 @@
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Hec17.jpg')"></div>
 					<div class="member-name" style="background-color: #4f7cfe;">Hec17</div>
-					<div class="member-desc">Corrector</div>
+					<div class="member-desc">Traductor</div>
 				</div>
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Jesa.jpg')"></div>
@@ -83,6 +78,16 @@
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Erena.jpg')"></div>
 					<div class="member-name" style="background-color: #4f7cfe;">Erena</div>
+					<div class="member-desc">Traductora<br>Correctora</div>
+				</div>
+				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Vanille.jpg')"></div>
+					<div class="member-name" style="background-color: #4f7cfe;">Vanille</div>
+					<div class="member-desc">Traductora<br>Correctora</div>
+				</div>
+				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Azu.jpg')"></div>
+					<div class="member-name" style="background-color: #4f7cfe;">Azu</div>
 					<div class="member-desc">Traductora<br>Correctora</div>
 				</div>
 				<div style="clear: both;"></div>
