--- a/translations/runefactory4/miembros.html
+++ b/translations/runefactory4/miembros.html
@@ -35,6 +35,14 @@
 			<div class="content-title">Miembros de la traducción</div>
 			<div class="content">
 				Aquí están todos aquellos que están llevando un papel importante en la traducción de Rune Factory 4 al español.
+				<div class="title"><h1>Líder del proyecto</h1></div>
+				<div class="credits-container"> 
+					<div class="credits-name">Darkmet98</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div style="clear: both;"></div>
 				<div class="title"><h1>RomHacking</h1></div>
 				<div class="credits-container"> 
 					<div class="credits-name">Raugo</div>
@@ -98,14 +106,20 @@
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div style="clear: both;"></div>
-				<div class="title"><h1>Corrección</h1></div>
 				<div class="credits-container"> 
-					<div class="credits-name">Natsu Karyuu</div>
+					<div class="credits-name">Vanille</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Natsu.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Azu</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div style="clear: both;"></div>
+				<div class="title"><h1>Corrección</h1></div>
 				<div class="credits-container"> 
 					<div class="credits-name">Sany</div>
 					<div class="credits-avatar">
@@ -124,6 +138,18 @@
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Vanille</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Azu</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Editores gráficos</h1></div>
 				<div class="credits-container"> 
@@ -131,6 +157,15 @@
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
+				</div>
+				<div style="clear: both;"></div>
+				<div class="title"><h1>Agradecimientos</h1></div>
+				<div class="credits-container"> 
+					<div class="credits-name">Hotaru</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Hotaru.jpg" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Por las herramientas nuevas para la traducción.</div>
 				</div>
 				<div style="clear: both;"></div>
 			</div>
