--- a/translations/lordofmagna/miembros.html
+++ b/translations/lordofmagna/miembros.html
@@ -36,6 +36,20 @@
 			<div class="content-title">Miembros de la traducción</div>
 			<div class="content">
 				Aquí están todos aquellos que están llevando un papel importante en la traducción de Lord of Magna: Maiden Heaven al español.
+				<div class="title"><h1>Líderes del proyecto</h1></div>
+				<div class="credits-container"> 
+					<div class="credits-name">Darkmet98</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Xppancho</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div style="clear: both;"></div>
 				<div class="title"><h1>RomHacking</h1></div>
 				<div class="credits-container"> 
 					<div class="credits-name">Raugo</div>
@@ -107,6 +121,18 @@
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Azu</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Erena</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Erena.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Editores gráficos</h1></div>
 				<div class="credits-container"> 
@@ -124,9 +150,9 @@
 					</div>
 				</div>
 				<div class="credits-container"> 
-					<div class="credits-name">Hec17</div>
+					<div class="credits-name">Sorium</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Hec17.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div class="credits-container"> 
