--- a/translations/lordofmagna/progresos.html
+++ b/translations/lordofmagna/progresos.html
@@ -36,22 +36,22 @@
 			<div class="content-title">Progresos</div>
 			<div class="content">
 				<b><u>¿Qué está traducido? </u></b><br>
-				Actualmente esta traducido: De momento nada, ¡estamos trabajando en ello! <br><br>
+				Actualmente esta traducido: La historia, las conversaciones, las relaciones, los objetos, las localizaciones, la interfaz, vídeos, las habilidades y magias. <br><br>
 				<b><u>¿Qué falta por traducir? </u></b><br>
-				Actualmente, falta por traducir: La historia, las conversaciones, las relaciones, los objetos, las localizaciones, la interfaz, vídeos, las habilidades y magias. <br><br>
+				Actualmente, falta por traducir: ¡Nada! <br><br>
 			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </u></b><br>
 				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
 				<table class='progress'>
 				<tr>
 				<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
 				</tr>
-				<tr><td>Historia</td><td class='wip'>80%</td><td class='wip'>35%</td><td class='no'>No</td></tr>
-				<tr><td>Conversaciones</td><td class='wip'>80%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Relaciones</td><td class='wip'>80%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Objetos</td><td class='yes'>100%</td><td class='wip'>50%</td><td class='no'>no</td></tr>
-				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='wip'>45%</td><td class='no'>no</td></tr>
-				<tr><td>Habilidades y magias</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Vídeos</td><td class='wip'>30%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Historia</td><td class='yes'>100%</td><td class='wip'>55%</td><td class='no'>No</td></tr>
+				<tr><td>Conversaciones</td><td class='yes'>100%</td><td class='wip'>35%</td><td class='no'>no</td></tr>
+				<tr><td>Relaciones</td><td class='yes'>100%</td><td class='wip'>35%</td><td class='no'>no</td></tr>
+				<tr><td>Objetos</td><td class='yes'>100%</td><td class='wip'>75%</td><td class='no'>no</td></tr>
+				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='wip'>90%</td><td class='no'>no</td></tr>
+				<tr><td>Habilidades y magias</td><td class='yes'>100%</td><td class='wip'>50%</td><td class='no'>no</td></tr>
+				<tr><td>Vídeos</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Interfaz</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</table>
    </div>
